--- a/todo_react/package.json
+++ b/todo_react/package.json
@@ -13,6 +13,7 @@
     "@types/node": "^20.11.0",
     "@types/react": "^18.2.37",
     "@types/react-dom": "^18.2.15",
+    "axios": "^1.6.7",
     "babel-jest": "^27.4.2",
     "babel-loader": "^8.2.3",
     "babel-plugin-named-asset-import": "^0.3.8",
@@ -143,6 +144,5 @@
   },
   "engines": {
     "node": ">=18.0.0"
-   }
-
+  }
 }
