--- a/todo_react/package.json
+++ b/todo_react/package.json
@@ -55,6 +55,7 @@
     "semver": "^7.3.5",
     "source-map-loader": "^3.0.0",
     "style-loader": "^3.3.1",
+    "styled-components": "^6.1.8",
     "tailwindcss": "^3.0.2",
     "terser-webpack-plugin": "^5.2.5",
     "typescript": "^4.9.5",
@@ -143,6 +144,5 @@
   },
   "engines": {
     "node": ">=18.0.0"
-   }
-
+  }
 }
